# ur10e-industrial-reconstruction

./: CMakeLists.txt  README.md  dependencies.repos  package.xml
config/: camera_calib.yaml  controllers.yaml  reconstruction.txt  rviz_config.rviz  target_detector_config.yaml
launch/: ros2_control.launch.py  start.launch.xml  test.launch.xml
meshes/collision/: tool.stl
meshes/visual/: tool.stl
urdf/: ros2_control.xacro  smw_workcell.xacro  workcell.xacro
