<?xml version="1.0"?>
<package format="3">
  <name>ur10e_support</name>
  <version>0.1.0</version>
  <description>This is the bringup package for launch the ros2 components of the workshop</description>

  <maintainer email="samantha.smith@swri.org">Samantha Smith</maintainer>
  <license>Apache 2.0</license>
  <author>Samantha Smith</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <exec_depend>snp_tpp</exec_depend>
  <exec_depend>snp_application</exec_depend>
  <exec_depend>snp_motion_planning</exec_depend>
  <exec_depend>snp_scanning</exec_depend>
  <exec_depend>snp_motion_execution</exec_depend>
  <exec_depend>industrial_reconstruction</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>rqt</exec_depend>
  <exec_depend>rqt_common_plugins</exec_depend>
  <exec_depend>ur_behavior_tree</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <depend>behaviortree_ros2</depend>
  <depend>snp_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
</package>
